Configuração pagina inicial

--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -1,1 +1,14 @@
-<p>pokemon-card works!</p>
+<div class="pokemon-card">
+  <div class="pokemon-card__body">
+    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt=""
+      class="pokemon-card__body__image">
+  </div>
+  <div class="pokemon-card__footer">
+    <div class="pokemon-card__footer__name">
+      Pikachu
+    </div>
+    <div class="pokemon-card__footer__types">
+
+    </div>
+  </div>
+</div>
