--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,6 +1,8 @@
 <div class="search-bar">
-  <input type="text" class="search-bar__input">
+  <input type="text" class="search-bar__input" placeholder="Pesquisar pokemons...">
   <button class="search-bar__button">
-    <mat-icon class="mat-icon-rtl-mirror" svgIcon="thumb-up"></mat-icon>
+    <div class="search-bar__button__circle"></div>
+    <div class="search-bar__button__line"></div>
+    <div class="search-bar__button__bottom"></div>
   </button>
 </div>
