--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <nav class="toolbar">
-  <div class="toolbar__logo"></div>
+  <div class="toolbar__logo">Pokedex</div>
   <div class="toolbar__search">
     <app-search-bar></app-search-bar>
   </div>
