--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,30 @@
   padding: 0;
   border: none;
   outline: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+ul {
+  list-style: none;
 }
 
 button {
   cursor: pointer;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@font-face {
+  font-family: pokemon;
+  src: url(assets/fonts/pokemon-solid.otf);
+}
+
+html,
+body {
+  min-height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 10px;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
